Fixed footer justification and alignment issues.

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,6 +21,11 @@ body {
   scroll-behavior: smooth;
 }
 
+.container {
+    max-width: 1100px;
+    margin: 0 auto;
+}
+
 a {
   color: #fff;
   text-decoration: none;
@@ -60,7 +65,7 @@ img {
 
 .navbar__menu-list {
   display: flex;
-  gap: 1.5rem;
+  gap: 2rem;
   align-items: center;
   font-weight: 700;
 }
@@ -429,10 +434,6 @@ img {
   color: #9f9caf;
   padding: 4rem 2rem;
   font-size: 0.9rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 auto;
 }
 
 .footer__links-link,
@@ -446,19 +447,21 @@ img {
 }
 
 .footer__container {
-  display: grid;
+ display: grid;
   grid-template-columns: repeat(3, 1fr);
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
   gap: 6rem;
-  width: 80%;
-  max-width: 1200px;
 }
 
 .footer__title {
   font-size: 1.2rem;
   color: #fff;
   margin-bottom: 0.5rem;
+}
+
+.footer__description {
+  text-align: left;
 }
 
 .footer__social {
@@ -569,6 +572,8 @@ img {
 }
 
 
+
+
 /* Media Query */
 
 @media (max-width: 992px) {
@@ -645,7 +650,7 @@ img {
   }
 }
 
-/* Media Queries */
+
 @media (max-width: 992px) {
   /* Hero */
   .hero {
